--- a/assets/css/detail-main.css
+++ b/assets/css/detail-main.css
@@ -1800,6 +1800,7 @@ ol {
 .navbar-area {
   width: 100%;
   z-index: 99;
+  background-color: #101130;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
   padding: 0;
@@ -2137,23 +2138,7 @@ ol {
     Hero Area CSS
 ========================================*/
 .hero-area {
-  position: relative;
-  background-image: url("../images/hero/hero-bg2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding-top: 180px;
-}
-
-.hero-area::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(43, 41, 61, 0.5);
-  z-index: 1;
+  padding-top: 120px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2301,6 +2286,21 @@ ol {
   .hero-area .hero-content .button .btn {
     width: 80%;
   }
+}
+
+.thumbnail-container {
+  height: 55dvh;
+  border-radius: 20px !important;
+  background-color: #000 !important;
+  overflow: hidden;
+  /* Ensures that the image doesn't overflow the container */
+}
+
+.thumbnail-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover !important;
+  object-position: center;
 }
 
 /*======================================
