--- a/assets/css/detail-main.css
+++ b/assets/css/detail-main.css
@@ -3066,7 +3066,8 @@ ol {
 	Footer CSS
 ========================================*/
 .footer {
-  background-color: #fff;
+  color: #fff;
+  background-color: #101130;
   position: relative;
 }
 
@@ -3117,7 +3118,7 @@ only screen and (min-width: 1400px) {
 }
 
 .footer .single-footer.f-about p {
-  color: #727272;
+  color: #ffffff80;
   margin-top: 25px;
   font-size: 15px;
   line-height: 26px;
@@ -3125,7 +3126,7 @@ only screen and (min-width: 1400px) {
 
 .footer .single-footer.f-about .social-title {
   font-weight: 500;
-  color: #797979;
+  color: #ffffff80;
   margin-top: 15px;
   font-size: 14px;
 }
@@ -3172,7 +3173,7 @@ only screen and (min-width: 1400px) {
 .footer .single-footer.f-link li a {
   font-size: 15px;
   font-weight: 400;
-  color: #727272;
+  color: #ffffff80;
   position: relative;
 }
 
@@ -3299,7 +3300,7 @@ only screen and (min-width: 1400px) {
 }
 
 .footer .copyright .copyright-text {
-  color: #727272;
+  color: #ffffff80;
   font-size: 15px;
   margin: 0;
 }
