--- a/public/assets/css/create-main.css
+++ b/public/assets/css/create-main.css
@@ -16,6 +16,13 @@ html {
   transform: translateX(-35%);
 }
 
+@media (max-width: 768px) {
+  .navbar-nav {
+    position: relative;
+    transform: translateX(0%);
+  }
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
