--- a/public/assets/css/sidebars.css
+++ b/public/assets/css/sidebars.css
@@ -33,7 +33,9 @@ main {
   fill: currentColor;
 }
 
-.dropdown-toggle { outline: 0; }
+.dropdown-toggle {
+  outline: 0;
+}
 
 .nav-flush .nav-link {
   border-radius: 0;
@@ -48,10 +50,11 @@ main {
   background-color: transparent;
   border: 0;
 }
+
 .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
+  background-color: #F20487;
 }
 
 .btn-toggle::before {
@@ -65,6 +68,7 @@ main {
 .btn-toggle[aria-expanded="true"] {
   color: rgba(0, 0, 0, .85);
 }
+
 .btn-toggle[aria-expanded="true"]::before {
   transform: rotate(90deg);
 }
@@ -76,21 +80,36 @@ main {
   margin-left: 1.25rem;
   text-decoration: none;
 }
+
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-  background-color: #d2f4ea;
+  background-color: #F20487;
 }
 
 .scrollarea {
   overflow-y: auto;
 }
 
-.fw-semibold { font-weight: 600; }
-.lh-tight { line-height: 1.25; }
+.fw-semibold {
+  font-weight: 600;
+}
+
+.lh-tight {
+  line-height: 1.25;
+}
 
 .sidebar-container {
-  padding-top: 45px;
-  padding-left: 45px;
-  padding-bottom: 45px;
+  padding-top: 25px;
+  border: none;
   border-right: 1px solid #00000030;
 }
+
+@media (max-width: 767px) {
+  .sidebar-container {
+    padding-top: 0.5rem;
+    padding-left: 1rem;
+    padding-bottom: 0.5rem;
+    border: 1px solid #00000050;
+  }
+}
+
